[Home]

Summary:ASTERISK-22192: [patch] Allow voicemail forwards with ODBC backend when format differs from attachfmt column
Reporter:cmaj (cmaj)Labels:realtime
Date Opened:2013-07-24 16:48:41Date Closed:2019-10-21 07:22:39
Priority:MinorRegression?
Status:Closed/CompleteComponents:Applications/app_voicemail/ODBC
Versions:11.5.0 13.18.4 GIT 16.6.0 17.0.0 Frequency of
Occurrence
Related
Issues:
Environment:Debian, PostgreSQL, orig Asterisk version 1.8.4.4Attachments:( 0) patch-11.5.0-app_voicemail-odbc-msg-fwd-file-formats.diff.txt
Description:Specifying multiple file formats in voicemail.conf breaks forwarding of previously recorded voicemails stored in ODBC if the attachfmt column is not equal to the filetype of the actual recording.

For example, in voicemail.conf:
format = gsm|wav

In voicemail_users table:
attachfmt = wav

The above breaks because messages are stored in the database in the first file format from the list -- in this case, as gsm files. But when attempting to forward the message to another user, the generated email tries to send a wav file. A sox conversion is required to convert the gsm to wav.

The advantage of storing gsm in the database is that it takes less space, but sending an email wav attachment is easier for end users to playback.

The reason this works during initial voicemail delivery and not during forwarding later on is because all formats specified in the voicemail.conf format line are recorded into the file system as you leave your voicemail message, but only the first format is stored in the database for later retrieval/forwarding.

Originally fixed on Asterisk 1.8.4.4, but patch updated to work with 11.5.0
Comments:By: Rusty Newton (rnewton) 2013-07-26 14:10:09.182-0500

This is really an improvement upon currently expected behavior, and not a fix for a bug. Be sure your patch applies cleanly and tests well with trunk.

By: cmaj (cmaj) 2019-09-26 19:03:09.695-0500

I still think this is a bug and it occasionally bites me, so I'm uploading new patches via Gerrit.

By: Friendly Automation (friendly-automation) 2019-10-21 07:22:40.263-0500

Change 12981 merged by Friendly Automation:
app_voicemail.c: Support multiple file formats for forwarded messages.

[https://gerrit.asterisk.org/c/asterisk/+/12981|https://gerrit.asterisk.org/c/asterisk/+/12981]

By: Friendly Automation (friendly-automation) 2019-10-21 10:34:45.645-0500

Change 12983 merged by Joshua Colp:
app_voicemail.c: Support multiple file formats for forwarded messages.

[https://gerrit.asterisk.org/c/asterisk/+/12983|https://gerrit.asterisk.org/c/asterisk/+/12983]

By: Friendly Automation (friendly-automation) 2019-10-21 10:35:03.080-0500

Change 12982 merged by Joshua Colp:
app_voicemail.c: Support multiple file formats for forwarded messages.

[https://gerrit.asterisk.org/c/asterisk/+/12982|https://gerrit.asterisk.org/c/asterisk/+/12982]

By: Friendly Automation (friendly-automation) 2019-10-21 10:35:14.534-0500

Change 12984 merged by Joshua Colp:
app_voicemail.c: Support multiple file formats for forwarded messages.

[https://gerrit.asterisk.org/c/asterisk/+/12984|https://gerrit.asterisk.org/c/asterisk/+/12984]